--- a/yahya.html
+++ b/yahya.html
@@ -35,7 +35,7 @@
             <div class="hakkimda-text">
                 <h2 class="hamza31">Yahya Haliloğlu</h2>
                 <p>
-                    Merhaba ben Yahya
+                    Merhaba ben  Yahyq.Pc mühendisiyim falna filan
                 </p>
                 <p class="hakints">
                     Daha fazla bilgi ve projelerim için <a href="https://www.linkedin.com/in/hamza-y%C4%B1lmaz-aa82542a4/" target="_blank"><i class="fa-brands fa-linkedin"></i></a> ve
