--- a/iletisim.html
+++ b/iletisim.html
@@ -6,15 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>İletisim</title>
     <link rel="stylesheet" href="style.css">
-            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <link rel="icon" href="img/favicon (5).ico" type="favicon">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+    <link rel="icon" href="img/favicon (5).ico" type="favicon">
 </head>
 
 <body>
-
     <nav class="navbar">
         <div class="myweb">
             <h2>My Website</h2>
@@ -41,6 +37,7 @@
                 <p>hamza.yilmazz2004@gmail.com</p>
             </div>
         </div>
+
         <form class="contact-form">
             <h3>Bana Mesaj Gönderin</h3>
             <input type="text" placeholder="Adınız" required>
@@ -49,4 +46,6 @@
             <button type="submit">Gönder</button>
         </form>
     </div>
-    
+</body>
+
+</html>
