--- a/hakkimda.html
+++ b/hakkimda.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/favicon (5).ico" type="favicon">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 
